--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,16 @@
 		    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 		    <version>2.8.5</version>
 		</dependency>
+		<dependency>
+	         <groupId>org.liquibase</groupId>
+	         <artifactId>liquibase-core</artifactId>
+     	</dependency>
+     	<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
+	
 
 	<build>
 		<plugins>
