--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,10 @@ spring:
         format_sql: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
+  liquibase:
+      change-log: db/changelog/changelog-master.yaml
+      enabled: false
+
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
