--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,10 @@
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+		    <artifactId>jackson-datatype-hibernate6</artifactId>
+		</dependency>
 	</dependencies>
 	
 
